[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/button/drawing_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/shared/header.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/button/open_dir_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/h_flow_container/h_flow_container.gd" type="Script" id=4]
[ext_resource path="res://ui/theme/texno_theme.tres" type="Theme" id=5]
[ext_resource path="res://ui/screens/symbol_screen.gd" type="Script" id=6]

[node name="Screen" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" parent="." instance=ExtResource( 2 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 0.0
margin_right = 1024.0
margin_bottom = 85.0
custom_constants/margin_right = 20
text = "Symbol Screen"

[node name="Cols" type="HBoxContainer" parent="."]
margin_top = 89.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Side" type="MarginContainer" parent="Cols"]
margin_right = 150.0
margin_bottom = 511.0
rect_min_size = Vector2( 150, 0 )
custom_constants/margin_right = 30
custom_constants/margin_left = 30

[node name="Rows" type="VBoxContainer" parent="Cols/Side"]
margin_left = 30.0
margin_right = 120.0
margin_bottom = 511.0
custom_constants/separation = 20

[node name="ButtonNewDrawing" type="Button" parent="Cols/Side/Rows"]
margin_right = 90.0
margin_bottom = 29.0
text = "draw"

[node name="OpenDirButton" parent="Cols/Side/Rows" instance=ExtResource( 3 )]
margin_top = 49.0
margin_right = 90.0
margin_bottom = 78.0

[node name="Main" type="ScrollContainer" parent="Cols"]
margin_left = 154.0
margin_right = 1024.0
margin_bottom = 511.0
rect_pivot_offset = Vector2( 1581.48, 289.13 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HFlowDrawings" type="Container" parent="Cols/Main"]
margin_right = 870.0
margin_bottom = 200.0
size_flags_horizontal = 3
script = ExtResource( 4 )
horizontal_margin = 10.0
vertical_margin = 10.0

[node name="DrawingButton" parent="Cols/Main/HFlowDrawings" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 200.0
margin_bottom = 200.0

[connection signal="pressed" from="Cols/Side/Rows/ButtonNewDrawing" to="." method="_on_ButtonNewDrawing_pressed"]
